# patchright-rust

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  Cargo.toml
.cargo/: mutants.toml
.claude/skills/doctest-conventions/: SKILL.md
.claude/skills/playwright-rs-usage/: SKILL.md
.config/: nextest.toml
.github/workflows/: pages.yml  release.yml  test.yml
crates/playwright/: CHANGELOG.md  Cargo.toml  build.rs
crates/playwright-rs-macros/src/: lib.rs
crates/playwright/examples/: connect_over_cdp.rs  keyboard_mouse.rs  locators.rs  screenshots.rs
crates/playwright/src/: assertions.rs  lib.rs
crates/playwright/src/api/: connect_options.rs
crates/playwright/src/protocol/: api_request_context.rs  aria_snapshot.rs  browser.rs  browser_context.rs  browser_type.rs  cdp_session.rs  click.rs  clock.rs  console_message.rs  (+37 more)
crates/playwright/tests/: playwright_version_test.rs  sigint_termios.rs
crates/site/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  input.css  preview.sh
crates/site-e2e/: Cargo.toml
crates/site-e2e/tests/: landing_page.rs
crates/site/snippets/: card_assertions.rs  card_locators.rs  card_responsive.rs  card_routing.rs  card_tracing.rs  card_webauthn.rs  card_webstorage.rs  example.cs  example.java  example.py  example.rs  install.toml
crates/site/src/: main.rs  snippets.rs  version.rs
crates/site/src/components/: code_block.rs  code_tabs.rs  comparison.rs  dogfood_banner.rs  feature_card.rs  features.rs  hero.rs  icons.rs  install.rs  mod.rs  version_switcher.rs
crates/xtask/src/: main.rs
docs/: roadmap.md
docs/agent/: CLAUDE_SNIPPET.md
docs/implementation-plans/: v1.0-gap-analysis.md
supply-chain/: audits.toml  config.toml
(+16 files in other folders)
