# Standalone (excluded from the root workspace): native crate that serves the
# Trunk-built site and drives it with playwright-rs — the dogfood deploy gate.
# Kept out of `members` so the publishable-crate CI/supply-chain is untouched;
# only pages.yml builds the site and runs this.
[package]
name = "playwright-rs-site-e2e"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Paul Adamson"]
repository = "https://github.com/padamson/playwright-rust"
publish = false

[dev-dependencies]
playwright-rs = { path = "../playwright" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
