# Standalone (excluded from the root workspace): this is a wasm32 Leptos CSR
# crate built by Trunk, not part of the publishable-crate workspace. Keeping it
# out of `members` leaves `cargo build/clippy/nextest --workspace` and the
# supply-chain (security.yml) graph for the shipped crates untouched.
[package]
name = "playwright-rs-site"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Paul Adamson"]
repository = "https://github.com/padamson/playwright-rust"
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr"] }

# Build-time only: highlight code snippets to HTML so nothing is shipped to the
# WASM bundle. `default-fancy` swaps the C oniguruma regex for pure-Rust
# fancy-regex.
[build-dependencies]
syntect = { version = "5.2", default-features = false, features = [
    "default-fancy",
] }
